Fix: background spacing

--- a/stylesheets/_top_page-background.scss
+++ b/stylesheets/_top_page-background.scss
@@ -253,77 +253,77 @@
         left: calc(50% - #{$height} / 2 - 5px);
     }
     div:nth-child(26) {
-        $height: calc(#{$margin} + #{$spaceing} * 25);
+        $height: calc(#{$margin} + #{$spaceing} * 26);
         width: $height;
         height: $height;
         top: calc(50% - #{$height} / 2);
         left: calc(50% - #{$height} / 2 - 5px);
     }
     div:nth-child(27) {
-        $height: calc(#{$margin} + #{$spaceing} * 25);
+        $height: calc(#{$margin} + #{$spaceing} * 27);
         width: $height;
         height: $height;
         top: calc(50% - #{$height} / 2);
         left: calc(50% - #{$height} / 2 - 5px);
     }
     div:nth-child(28) {
-        $height: calc(#{$margin} + #{$spaceing} * 25);
+        $height: calc(#{$margin} + #{$spaceing} * 28);
         width: $height;
         height: $height;
         top: calc(50% - #{$height} / 2);
         left: calc(50% - #{$height} / 2 - 5px);
     }
     div:nth-child(29) {
-        $height: calc(#{$margin} + #{$spaceing} * 25);
+        $height: calc(#{$margin} + #{$spaceing} * 29);
         width: $height;
         height: $height;
         top: calc(50% - #{$height} / 2);
         left: calc(50% - #{$height} / 2 - 5px);
     }
     div:nth-child(30) {
-        $height: calc(#{$margin} + #{$spaceing} * 25);
+        $height: calc(#{$margin} + #{$spaceing} * 30);
         width: $height;
         height: $height;
         top: calc(50% - #{$height} / 2);
         left: calc(50% - #{$height} / 2 - 5px);
     }
     div:nth-child(31) {
-        $height: calc(#{$margin} + #{$spaceing} * 25);
+        $height: calc(#{$margin} + #{$spaceing} * 31);
         width: $height;
         height: $height;
         top: calc(50% - #{$height} / 2);
         left: calc(50% - #{$height} / 2 - 5px);
     }
     div:nth-child(32) {
-        $height: calc(#{$margin} + #{$spaceing} * 25);
+        $height: calc(#{$margin} + #{$spaceing} * 32);
         width: $height;
         height: $height;
         top: calc(50% - #{$height} / 2);
         left: calc(50% - #{$height} / 2 - 5px);
     }
     div:nth-child(33) {
-        $height: calc(#{$margin} + #{$spaceing} * 25);
+        $height: calc(#{$margin} + #{$spaceing} * 33);
         width: $height;
         height: $height;
         top: calc(50% - #{$height} / 2);
         left: calc(50% - #{$height} / 2 - 5px);
     }
     div:nth-child(34) {
-        $height: calc(#{$margin} + #{$spaceing} * 25);
+        $height: calc(#{$margin} + #{$spaceing} * 34);
         width: $height;
         height: $height;
         top: calc(50% - #{$height} / 2);
         left: calc(50% - #{$height} / 2 - 5px);
     }
     div:nth-child(35) {
-        $height: calc(#{$margin} + #{$spaceing} * 25);
+        $height: calc(#{$margin} + #{$spaceing} * 35);
         width: $height;
         height: $height;
         top: calc(50% - #{$height} / 2);
         left: calc(50% - #{$height} / 2 - 5px);
     }
     div:nth-child(36) {
-        $height: calc(#{$margin} + #{$spaceing} * 25);
+        $height: calc(#{$margin} + #{$spaceing} * 36);
         width: $height;
         height: $height;
         top: calc(50% - #{$height} / 2);
